--- a/public/css/Component/CenterManager/CenterManager_Collector_Add.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector_Add.css
@@ -294,7 +294,7 @@
     .main-bottom-down-content {
         width: 50%;
         height: 850px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--form-box-shadow);
         border-radius: 10px;
         display: flex;
         flex-direction: column;
@@ -409,7 +409,7 @@
         font-size: 14px;
         margin-bottom: 8px;
         background-color: var(--green-color-one);
-        color: #fff;
+        color: var(--background-color-main);
         padding: 9px;
         border-radius:5px ;
         width: 50%;
@@ -483,7 +483,7 @@
         height: 41px;
         width: 95%;
         outline: none;
-        color: white;
+        color: var(--background-color-main);
         font-size: 18px;
         font-weight: 500;
         border-radius: 5px;
@@ -495,7 +495,7 @@
     }
 
     .main-bottom-down-content-button button:hover {
-        background: #19954e;
+        background: var(--button-hover-green);
     }
 
     /*Success popup*/
@@ -518,13 +518,14 @@
 
     .popup {
         width: 400px;
-        background: white;
+        background: var(--background-color-main);
         font-family: 'poppins', sans-serif;
         border-radius: 6px;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
+        color: var(--main-text-color);
         transition: transform 0.4s, top 0.4s;
+        box-shadow: var(--box-shadow);
     }
 
     .open-popup {
@@ -551,7 +552,7 @@
         margin-top: 30px;
         padding: 10px 0;
         background: var(--green-color-one);
-        color: white;
+        color: var(--background-color-main);
         border: 0;
         outline: none;
         font-size: 18px;
