--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,6 +199,7 @@
     --yellow-color: #f6e58d;
     --red-color: #F13E3E;
     --calander-hover-color: #f2f2f2;
+    --form-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 
