--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -609,6 +609,31 @@
         }
     }
 
+ 
+
+    @media screen and (max-width: 1500px) {
+        .updatebtn{
+            margin-right: 5px;
+            width: 250px;
+          
+        }
+        .cancelbtn1{
+            width: 250px;
+        }
+    }
+
+    @media screen and (max-width: 1190px) {
+        .updatebtn{
+            margin-right: 4px;
+            width: 200px;
+          
+        }
+        .cancelbtn1{
+            width: 200px;
+        }
+    }
+
+
     @media screen and (max-width: 1118px) {
 
 
@@ -649,6 +674,17 @@
             background-color: #74b9ff;
             cursor: pointer;
         }
+
+        .updatebtn{
+            margin-right: 4px;
+            width: 175px;
+          
+        }
+        .cancelbtn1{
+            width: 175px;
+        }
+
+        
 
     }
 
@@ -704,190 +740,175 @@
             background-color: #74b9ff;
             cursor: pointer;
         }
-    }
 
-    @media screen and (max-width: 692px) {
-
-
-        .cancel-confirm-content {
-            background-color: #ecf0f1;
-            width: 40%;
-            height: 60%;
-            border-radius: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-        }
-
-        .cancel-confirm-content input {
-            width: 70%;
-            height: 80px;
-
-        }
-
-        .cancel-confirm-content h1 {
-            margin-bottom: 12px;
-            font-size: 17px !important;
-        }
-
-        .confim-cancell-content-box {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: row;
-        }
-
-        .confim-cancell-content-box button {
-            width: 75px;
-            height: 35px;
-            font-size: 12px;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: none;
-            margin: 10px;
-            background-color: #74b9ff;
-            cursor: pointer;
-        }
-
-    }
-
-    @media screen and(max-width: 946px) {
-
-        .updateData {
-            margin-left: 10px;
-
-        }
-
-        .cancelbtn1 {
+        
+        .updatebtn{
+            margin-right: 4px;
             width: 100px;
+          
         }
-
-        .updatebtn {
+        .cancelbtn1{
             width: 100px;
+            margin-right: 4px;
         }
 
     }
 
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
+ 
+    @media screen and (max-width: 1108px) {
+        .notification_popup h1 {
+            font-size: 19px;
+            letter-spacing: 0.001rem;
+            margin-top: 5px;
+            margin-left: 8px;
         }
 
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
+        .notification_popup {
+            width: 26%;
         }
     }
 
-    @media screen and (max-width: 762px) {
-        .main-right-top-two button {
-            width: 125px;
-            font-size: 15px;
-        }
-    }
-
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-
-        }
-
-        .table td {
-
-            font-size: 12px;
-
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-
-        }
-
-
-
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
-
-
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-
-
-        .table td {
-
-            font-size: 9px;
-
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-
-        }
-
+    @media screen and (max-width:950px) {
         .main-right-bottom {
+            width: 100%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
             width: 140%;
         }
 
+        .main-right-bottom-down {
+            width: 140%;
+        }
+
+        .notification_popup {
+            width: 28%;
+        }
+
+        .main-right-top-profile-cont p{
+            font-size: 12px;
+        }
+
+        .updateData{
+            margin-left: 40px;
+        }
+
+        .updatebtn{
+            margin-right: 4px;
+            width: 150px;
+          
+        }
+        .cancelbtn1{
+            width: 150px;
+            margin-right: 4px;
+        }
+
     }
+
+  
+
+    @media screen and (max-width:780px){
+        .updateData{
+            margin-left: 30px;
+        }
+
+        .updatebtn{
+            margin-right: 4px;
+            width: 100px;
+          
+        }
+        .cancelbtn1{
+            width: 100px;
+        }
+
+        
+    }
+
+    @media screen and (max-width:660px) {
+        .notification_popup {
+            width: 35%;
+            right: 10%;
+        }
+
+        .main-right-top-four-component p{
+            display: none;
+
+        }
+
+        .main-right-top-four-component{
+            width: auto;
+        }
+
+        .updateData{
+            margin-left: 20px;
+        }
+
+        
+
+      
+    }
+
+    @media screen and (max-width:540px) {
+        .main-right-bottom {
+            width: 160%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 160%;
+        }
+
+        .main-right-bottom-down {
+            width: 160%;
+        }
+
+        .notification_popup {
+            width: 46%;
+            left: 15%;
+        }
+
+        .main-right-top-four-left{
+            margin-left: 35px;
+            padding-left: 0;
+        }
+
+        .main-right-top-four-left button{
+            width: 60px;
+        }
+
+        .main-right-top-four-left p{
+            display: none;
+        }
+
+        .main-right-top-four-right{
+            margin-right: 40%;
+        }
+
+        .main-right-top-profile-cont h3{
+            font-size: 16px;
+        }
+
+        .line{
+            margin-left: -10px !important;
+        }
+
+        .updateData{
+            margin-left: 15px;
+        }
+
+        .cancelbtn1{
+            width: 110px;
+        }
+
+        .popup{
+            width: 300px;
+        }
+       
+
+      
+    }
+
+  
 
 }
