--- a/public/css/Component/CenterManager/CenterManager_Complaints.css
+++ b/public/css/Component/CenterManager/CenterManager_Complaints.css
@@ -73,7 +73,7 @@
             width: 15.5px;
             height: 15.5px;
             border-radius: 50%;
-            background-color: #F13E3E;
+            background-color: var(--red-color);
             margin-top: -11px;
             margin-left: -15px;
             color: var(--background-color-main);
@@ -344,7 +344,7 @@
         }
 
         .main-bottom-component-left button:hover{
-            background: #19954e;
+            background: var(--button-hover-green);
         }
 
 
@@ -365,13 +365,14 @@
 
         .popup {
             width: 400px;
-            background: white;
+            background: var(--background-color-main);
             font-family: 'poppins', sans-serif;
             border-radius: 6px;
             text-align: center;
             padding: 0 30px 30px;
-            color: #333;
+            color: var(--main-text-color);
             transition: transform 0.4s, top 0.4s;
+            box-shadow: var(--box-shadow);
         }
 
         .open-popup {
@@ -399,7 +400,7 @@
             margin-top: 30px;
             padding: 10px 0;
             background: var(--green-color-one);
-            color: white;
+            color: var(--background-color-main);
             border: 0;
             outline: none;
             font-size: 15px;
