--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,6 +200,7 @@
     --red-color: #F13E3E;
     --calander-hover-color: #f2f2f2;
     --form-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    --request-top-color: #ecf0f1;
 }
 
 
