--- a/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
@@ -138,7 +138,7 @@
 
     .cancel-confirm-content {
         width: 500px;
-        background: white;
+        background: var(--background-color-main);
         font-family: 'poppins', sans-serif;
         border-radius: 6px;
         padding: 30px;
@@ -251,6 +251,7 @@
         flex-direction: column;
         overflow: hidden;
         transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+       
     }
 
     .location_pop.active {
@@ -260,18 +261,21 @@
     .location_pop_content {
         width: 700px;
         padding: 10px;
-        background-color: #f1f2f6;
+        background-color:var(--background-color-main);
         border-radius: 10px;
         padding: 20px;
         padding-bottom: 40px;
         height: 350px;
         overflow: hidden;
+        box-shadow: var(--box-shadow);
+        border: 1px solid var(--main-text-color);
     }
 
     .location_pop_map {
         width: 100;
         height: 100%;
         border-radius: 10px;
+       
     }
 
     .location_close {
@@ -282,8 +286,8 @@
     }
 
     .location_close button {
-        background-color: #ff4757;
-        color: #fff;
+        background-color: var(--red-color);
+        color: var(--background-color-main);
         cursor: pointer;
         border: none;
         font-size: 16px;
@@ -332,13 +336,13 @@
 
     .request-details-pop-form {
         width: 500px;
-        background: white;
+        background: var(--background-color-main);
         border-radius: 6px;
         top: 0;
         position: relative;
         text-align: center;
         padding: 20px;
-        color: #333;
+        color: var(--main-text-color);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -374,10 +378,11 @@
         display: grid;
         grid-template-columns: 30% 70%;
         width: 95%;
-        background-color: white;
+        background-color: var(--background-color-main);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         border-radius: 6px;
         margin-bottom: 10px;
+        box-shadow: var(--form-box-shadow);
 
     }
 
@@ -407,7 +412,7 @@
     .request-details-right-labels span {
         margin-bottom: 15px;
         font-size: 15px;
-        color: #7c7c7d;
+        color: var(--main-text-color);
     }
 
     .request-details-right-values {
@@ -500,7 +505,7 @@
         height: 100%;
         padding-top: 10px;
         margin-top: 17px;
-        box-shadow: var(--box-shadow);
+        box-shadow: var(--form-box-shadow);
     }
 
     .personal-details-right {
@@ -521,7 +526,7 @@
     .personal-details-right-labels span {
         margin-bottom: 15px;
         font-size: 15px;
-        color: #7c7c7d;
+        color: var(--main-text-color);
     }
 
     .personal-details-right-values {
@@ -557,7 +562,7 @@
     .personal-details-left p {
         margin-top: 5px;
         font-size: 15px;
-        color: #7c7c7d;
+        color: var(--main-text-color);
     }
 
     .personal-details-left span {
