--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,6 +201,7 @@
     --calander-hover-color: #f2f2f2;
     --form-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     --request-top-color: #ecf0f1;
+    --yellow-color-hover: #ddce7f;
 }
 
 
