--- a/public/css/Component/Collector/Collector_Analatics.css
+++ b/public/css/Component/Collector/Collector_Analatics.css
@@ -97,7 +97,7 @@
     }
 
     .main-right-bottom {
-        height: 2000px;
+        height: 1500px;
     }
 
     .main-right-bottom {
@@ -118,9 +118,23 @@
                 justify-content: center;
                 box-sizing: border-box;
                 padding-left: 30px;
-                margin-right: 35%;
+            }
+            .top-bar-details {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                width: 375px;
+                margin-right: 15%;
             }
 
+            .top-bar-details .cont {
+                padding: 6px 20px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                box-sizing: border-box;
+                font-size: 14px;
+                cursor: pointer;
+            }
             .top-bar-left h2 {
                 font-size: 21px !important;
             }
@@ -135,7 +149,6 @@
                 display: flex;
                 justify-content: space-around;
                 width: 375px;
-                margin-right: 2%;
                 margin-top: -15px;
             }
 
@@ -231,7 +244,7 @@
                 transition: background-color 0.3s ease;
                 letter-spacing: 0.03rem;
                 margin-bottom: 15px;
-                margin-right: 25px;
+                margin-right: 20px;
             }
 
             button:hover {
@@ -276,7 +289,8 @@
 
             .left-cont {
                 i {
-                    font-size: 45px;
+                    font-size: 50px;
+                    margin-top: 40px;
                 }
 
                 p {
