--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,6 +202,7 @@
     --form-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     --request-top-color: #ecf0f1;
     --yellow-color-hover: #ddce7f;
+    --report-table-color: #f9f9f9;
 }
 
 
